--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+title: KafifLauncher
+description: واجهة مستخدم صوتية لاستخدام الهواتف الذكية والأجهزة اللوحية للمكفوفين
+dir: rtl
